deploy/k8s/ctfd-image/ctfd-maria-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ctfd
spec:
  selector:
    app: ctfd-mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
