deploy/k8s/ctfd-image/ctfd-mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ctfd-mariadb
  namespace: ctfd
  labels:
    app: ctfd
spec:
  serviceName: ctfd-mariadb
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-mariadb
  template:
    metadata:
      labels:
        app: ctfd-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: ctfd-mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ctfd-mariadb
  namespace: ctfd
  labels:
    app: ctfd
spec:
  selector:
    app: ctfd-mariadb
  ports:
   - name: mysql
     port: 3306
     targetPort: 3306
     protocol: TCP
